Ready for H.10 and H9.6 complete benchmarking